fix: Carousel / fix extra space bug by adding width

--- a/client/src/components/UI/Carousel.module.css
+++ b/client/src/components/UI/Carousel.module.css
@@ -7,6 +7,7 @@
 
 .carouselList {
     display: flex;
+    width: 100%;
     overflow-x: scroll;
     -ms-overflow-style: none;
     scrollbar-width: 0;
